--- a/GoUtah/GoUtah/Main.storyboard
+++ b/GoUtah/GoUtah/Main.storyboard
@@ -194,7 +194,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="VVh-bc-gRW">
-                                <rect key="frame" x="93" y="369" width="415" height="130"/>
+                                <rect key="frame" x="0.0" y="364" width="415" height="130"/>
                                 <color key="backgroundColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -219,7 +219,7 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="It's hot out there--Drink Water!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DiL-D3-GlL">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="It's hot out there--Drink Water!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DiL-D3-GlL">
                                 <rect key="frame" x="5" y="547" width="410" height="35"/>
                                 <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="14"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -267,18 +267,26 @@
                                     <outlet property="delegate" destination="Gh5-AG-jE0" id="RBk-L5-F19"/>
                                 </connections>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gr4-dk-M0C">
-                                <rect key="frame" x="480" y="72" width="50" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gr4-dk-M0C">
+                                <rect key="frame" x="529" y="65" width="50" height="30"/>
                                 <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="15"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Map">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="buttonTapped:" destination="Gh5-AG-jE0" eventType="touchUpInside" id="nXK-EN-K4d"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ra8-4I-fsd">
-                                <rect key="frame" x="448" y="494" width="60" height="60"/>
+                                <rect key="frame" x="0.0" y="62" width="62" height="54"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TEMP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Hl-PP-mWT">
+                                <rect key="frame" x="15" y="99" width="42" height="21"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="12"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -287,10 +295,10 @@
                         <constraints>
                             <constraint firstItem="J1d-GN-uhb" firstAttribute="top" secondItem="B6s-7o-wco" secondAttribute="bottom" constant="-2" id="0kd-9V-8d8"/>
                             <constraint firstItem="J1d-GN-uhb" firstAttribute="centerX" secondItem="56B-OJ-8pp" secondAttribute="centerX" id="LTm-wI-CPm"/>
-                            <constraint firstItem="gr4-dk-M0C" firstAttribute="top" secondItem="EbA-R2-kmF" secondAttribute="bottom" constant="8" id="OYE-pZ-3WO"/>
+                            <constraint firstItem="gr4-dk-M0C" firstAttribute="top" secondItem="EbA-R2-kmF" secondAttribute="bottom" constant="1" id="OYE-pZ-3WO"/>
                             <constraint firstItem="7vw-nl-ugn" firstAttribute="top" secondItem="J1d-GN-uhb" secondAttribute="bottom" constant="3" id="aQb-ve-RAo"/>
                             <constraint firstItem="B6s-7o-wco" firstAttribute="top" secondItem="EbA-R2-kmF" secondAttribute="bottom" constant="8" id="g8i-y2-NAs"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="gr4-dk-M0C" secondAttribute="trailing" constant="50" id="ljy-5M-MsK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gr4-dk-M0C" secondAttribute="trailing" constant="1" id="ljy-5M-MsK"/>
                             <constraint firstItem="B6s-7o-wco" firstAttribute="centerX" secondItem="56B-OJ-8pp" secondAttribute="centerX" id="yfS-sL-sYb"/>
                         </constraints>
                     </view>
@@ -323,7 +331,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="orw-aB-4ib">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="orw-aB-4ib">
                                 <rect key="frame" x="0.0" y="20" width="600" height="518"/>
                             </imageView>
                         </subviews>
