--- a/GoUtah/GoUtah/Main.storyboard
+++ b/GoUtah/GoUtah/Main.storyboard
@@ -96,26 +96,23 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fcl-dP-Tgz">
                                                     <rect key="frame" x="80" y="20" width="440" height="32"/>
                                                     <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="20"/>
-                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0vL-yw-JE7">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="152"/>
                                                 </imageView>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstItem="0vL-yw-JE7" firstAttribute="top" secondItem="F4i-Je-hGy" secondAttribute="top" id="Dbp-Ns-X5v"/>
-                                                <constraint firstAttribute="bottom" secondItem="0vL-yw-JE7" secondAttribute="bottom" id="LBD-od-Uxp"/>
-                                                <constraint firstItem="0vL-yw-JE7" firstAttribute="leading" secondItem="F4i-Je-hGy" secondAttribute="leading" id="Osr-oA-cAn"/>
-                                                <constraint firstAttribute="trailing" secondItem="0vL-yw-JE7" secondAttribute="trailing" id="RFj-iu-JkI"/>
-                                                <constraint firstItem="Fcl-dP-Tgz" firstAttribute="leading" secondItem="F4i-Je-hGy" secondAttribute="leading" constant="80" id="bmJ-qN-Uie"/>
-                                                <constraint firstItem="Fcl-dP-Tgz" firstAttribute="top" secondItem="F4i-Je-hGy" secondAttribute="top" constant="20" id="kEs-YK-817"/>
-                                                <constraint firstAttribute="bottom" secondItem="Fcl-dP-Tgz" secondAttribute="bottom" constant="100" id="nCh-P3-vQh"/>
-                                                <constraint firstAttribute="trailing" secondItem="Fcl-dP-Tgz" secondAttribute="trailing" constant="80" id="yyB-Db-hAR"/>
+                                                <constraint firstItem="Fcl-dP-Tgz" firstAttribute="top" secondItem="F4i-Je-hGy" secondAttribute="top" constant="20" id="0oI-YH-1p7"/>
+                                                <constraint firstAttribute="bottom" secondItem="Fcl-dP-Tgz" secondAttribute="bottom" constant="100" id="6Nk-WF-Hz5"/>
+                                                <constraint firstAttribute="trailing" secondItem="Fcl-dP-Tgz" secondAttribute="trailing" constant="80" id="8Am-dX-bKv"/>
+                                                <constraint firstAttribute="trailing" secondItem="0vL-yw-JE7" secondAttribute="trailing" id="JW1-O4-o9F"/>
+                                                <constraint firstItem="Fcl-dP-Tgz" firstAttribute="leading" secondItem="F4i-Je-hGy" secondAttribute="leading" constant="80" id="Yjc-ub-aHY"/>
+                                                <constraint firstItem="0vL-yw-JE7" firstAttribute="top" secondItem="F4i-Je-hGy" secondAttribute="top" id="fOD-r1-Xzp"/>
+                                                <constraint firstAttribute="bottom" secondItem="0vL-yw-JE7" secondAttribute="bottom" id="nsU-Hq-kMz"/>
+                                                <constraint firstItem="0vL-yw-JE7" firstAttribute="leading" secondItem="F4i-Je-hGy" secondAttribute="leading" id="t2l-tg-vNk"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="featureImageView" destination="0vL-yw-JE7" id="aSC-TC-9N3"/>
                                             <outlet property="nameLabel" destination="Fcl-dP-Tgz" id="qJQ-GA-wM9"/>
